# ragdeck

./: .gitignore  CLAUDE.md  Containerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  security.yml
docs/: agentic.md  api.md  configuration.md  pages.md
quadlets/: ragdeck.container
ragdeck/: main.py
ragdeck/static/: app.js  style.css
ragdeck/templates/: admin.html  base.html  collections.html  dashboard.html  ingest.html  metrics.html  querylog.html
tests/: test_auth.py  test_collections.py  test_health.py  test_live.py  test_main.py  test_metrics.py  test_querylog.py  test_service_unavailable.py  test_ui.py
