[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragdeck"
version = "0.1.0"
description = "Admin UI for the rag-suite stack — single-pane management for all services"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "httpx"]

[project.scripts]
ragdeck = "ragdeck.main:main"
